// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcTextInput > password input field > password policy > displays error state if password does not match criteria 1`] = `
"<div class=""><label class="oc-label" for="oc-textinput-24"></label>
  <div class="oc-position-relative">
    <!--v-if-->
    <div class="oc-text-input-password-wrapper"><input id="oc-textinput-24" aria-invalid="false" class="oc-text-input oc-input oc-rounded" type="password"> <button type="button" aria-label="Show password" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-input-show-password-toggle oc-px-s oc-background-default">
        <!--v-if-->
        <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s oc-icon-passive"><!----></span>
      </button> <button type="button" aria-label="Copy password" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-input-copy-password-button oc-px-s oc-background-default">
        <!--v-if-->
        <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s oc-icon-passive"><!----></span>
      </button>
      <!--v-if-->
    </div>
    <portal to="app.design-system.password-policy">
      <div class="oc-text-small oc-flex oc-flex-column"><span>Please enter a password that meets the following criteria:</span>
        <div class="oc-flex oc-text-input-password-policy-rule-wrapper">
          <div class="oc-flex oc-flex-middle oc-text-input-password-policy-rule"><span class="oc-icon oc-icon-s oc-icon-danger"><!----></span> <span class="oc-text-input-danger">At least 8 characters</span></div>
        </div>
      </div>
    </portal>
    <!--v-if-->
  </div>
  <!--v-if-->
  <portal-target name="app.design-system.password-policy"></portal-target>
</div>"
`;

exports[`OcTextInput > password input field > password policy > displays success state if password matches criteria 1`] = `
"<div class=""><label class="oc-label" for="oc-textinput-25"></label>
  <div class="oc-position-relative">
    <!--v-if-->
    <div class="oc-text-input-password-wrapper"><input id="oc-textinput-25" aria-invalid="false" class="oc-text-input oc-input oc-rounded" type="password"> <button type="button" aria-label="Show password" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-input-show-password-toggle oc-px-s oc-background-default">
        <!--v-if-->
        <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s oc-icon-passive"><!----></span>
      </button> <button type="button" aria-label="Copy password" class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-input-copy-password-button oc-px-s oc-background-default">
        <!--v-if-->
        <!-- @slot Content of the button --> <span class="oc-icon oc-icon-s oc-icon-passive"><!----></span>
      </button>
      <!--v-if-->
    </div>
    <portal to="app.design-system.password-policy">
      <div class="oc-text-small oc-flex oc-flex-column"><span>Please enter a password that meets the following criteria:</span>
        <div class="oc-flex oc-text-input-password-policy-rule-wrapper">
          <div class="oc-flex oc-flex-middle oc-text-input-password-policy-rule"><span class="oc-icon oc-icon-s oc-icon-success"><!----></span> <span class="oc-text-input-success">At least 8 characters</span></div>
        </div>
      </div>
    </portal>
    <!--v-if-->
  </div>
  <!--v-if-->
  <portal-target name="app.design-system.password-policy"></portal-target>
</div>"
`;
